# cars

./: .env  README.md  openapi.json  pyproject.toml
ddl/: car.sql  driver.sql  insert_car.sql  trip.sql  user.sql
src/: __main__.py
src/cars_backend/: create_app.py  settings.py
src/cars_backend/api/: ping.py
src/cars_backend/api/v1/auth/: auth.py  models.py  views.py
src/cars_backend/api/v1/cars/: core.py  models.py  views.py
src/cars_backend/api/v1/dashboards/: core.py  views.py
src/cars_backend/api/v1/drivers/: core.py  models.py  views.py
src/cars_backend/api/v1/trips/: core.py  models.py  views.py
src/ml/: dataset.csv  gen_car.py  model.h5  model.ipynb  model.joblib
