[tool.poetry]
name = "cars"
version = "0.1.0"
description = ""
authors = ["silverfatt <silvestr.fat@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
loguru = "^0.7.3"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.0"
pydantic = "^2.10.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
